tests/errors/unterminated_comment.js
// Error: Unterminated block comment
function unterminated_comment() {
  let x = 10;
  /* This comment never ends
  return x;
}

unterminated_comment();
